--- a/package.json
+++ b/package.json
@@ -11,7 +11,15 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@duskmoon/vue3-typed-js": "^0.0.4",
+    "@element-plus/icons-vue": "^2.3.1",
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-vue": "^5.1.12",
+    "axios": "^1.7.9",
+    "element-plus": "^2.7.4",
+    "nprogress": "^0.2.0",
     "pinia": "^2.3.0",
+    "qs": "^6.13.1",
     "sass": "^1.77.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
@@ -19,6 +27,7 @@
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.10.2",
+    "@types/vue": "^2.0.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "npm-run-all2": "^7.0.2",
