--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,21 @@
 {
+  "name": "node-server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+  "scripts": {
+    "start": "node ./app"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "mysql2": "^3.12.0"
+    "express": "^4.18.2",
+    "file": "^0.2.2",
+    "http": "^0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.10.0"
   }
 }
